--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,105 +1,105 @@
 html {
   -webkit-text-size-adjust: 100%;
-  line-height: 1.15
+  line-height:1.15
 }
 
 body {
-  margin: 0
+  margin:0
 }
 
 main {
-  display: block
+  display:block
 }
 
 h1 {
   font-size: 2em;
-  margin: .67em 0
+  margin:.67em 0
 }
 
 hr {
   box-sizing: content-box;
   height: 0;
-  overflow: visible
+  overflow:visible
 }
 
 pre {
-  font-family: monospace,monospace;
-  font-size: 1em
+  font-family: monospace, monospace;
+  font-size:1em
 }
 
 a {
-  background-color: transparent
+  background-color:transparent
 }
 
 abbr[title] {
   border-bottom: none;
   text-decoration: underline;
   -webkit-text-decoration: underline dotted;
-  text-decoration: underline dotted
+  text-decoration:underline dotted
 }
 
-b,strong {
-  font-weight: bolder
+b, strong {
+  font-weight:bolder
 }
 
-code,kbd,samp {
-  font-family: monospace,monospace;
-  font-size: 1em
+code, kbd, samp {
+  font-family: monospace, monospace;
+  font-size:1em
 }
 
 small {
-  font-size: 80%
+  font-size:80%
 }
 
-sub,sup {
+sub, sup {
   font-size: 75%;
   line-height: 0;
   position: relative;
-  vertical-align: baseline
+  vertical-align:baseline
 }
 
 sub {
-  bottom: -.25em
+  bottom:-.25em
 }
 
 sup {
-  top: -.5em
+  top:-.5em
 }
 
 img {
-  border-style: none
+  border-style:none
 }
 
-button,input,optgroup,select,textarea {
+button, input, optgroup, select, textarea {
   font-family: inherit;
   font-size: 100%;
   line-height: 1.15;
-  margin: 0
+  margin:0
 }
 
-button,input {
-  overflow: visible
+button, input {
+  overflow:visible
 }
 
-button,select {
-  text-transform: none
+button, select {
+  text-transform:none
 }
 
-[type=button],[type=reset],[type=submit],button {
-  -webkit-appearance: button
+[type=button], [type=reset], [type=submit], button {
+  -webkit-appearance:button
 }
 
-[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner {
+[type=button]::-moz-focus-inner, [type=reset]::-moz-focus-inner, [type=submit]::-moz-focus-inner, button::-moz-focus-inner {
   border-style: none;
-  padding: 0
+  padding:0
 }
 
-[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring {
-  outline: 1px dotted ButtonText
+[type=button]:-moz-focusring, [type=reset]:-moz-focusring, [type=submit]:-moz-focusring, button:-moz-focusring {
+  outline:1px dotted ButtonText
 }
 
 fieldset {
-  padding: .35em .75em .625em
+  padding:.35em .75em .625em
 }
 
 legend {
@@ -108,196 +108,153 @@ legend {
   display: table;
   max-width: 100%;
   padding: 0;
-  white-space: normal
+  white-space:normal
 }
 
 progress {
-  vertical-align: baseline
+  vertical-align:baseline
 }
 
 textarea {
-  overflow: auto
+  overflow:auto
 }
 
-[type=checkbox],[type=radio] {
+[type=checkbox], [type=radio] {
   box-sizing: border-box;
-  padding: 0
+  padding:0
 }
 
-[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button {
-  height: auto
+[type=number]::-webkit-inner-spin-button, [type=number]::-webkit-outer-spin-button {
+  height:auto
 }
 
 [type=search] {
   -webkit-appearance: textfield;
-  outline-offset: -2px
+  outline-offset:-2px
 }
 
 [type=search]::-webkit-search-decoration {
-  -webkit-appearance: none
+  -webkit-appearance:none
 }
 
 ::-webkit-file-upload-button {
   -webkit-appearance: button;
-  font: inherit
+  font:inherit
 }
 
 details {
-  display: block
+  display:block
 }
 
 summary {
-  display: list-item
+  display:list-item
 }
 
 template {
-  display: none
+  display:none
 }
 
 [hidden] {
-  display: none
+  display:none
 }
 
-*,:after,:before {
-  box-sizing: border-box
+*, :after, :before {
+  box-sizing:border-box
 }
 
 img {
   display: block;
-  max-width: 100%
+  max-width:100%
 }
 
 ul {
   list-style: none;
   margin-bottom: 0;
   margin-top: 0;
-  padding-left: 0
+  padding-left:0
 }
 
 a {
   color: inherit;
-  text-decoration: none
-}
-
-:root {
-  --color-incorrect: #757575;
-  --color-present: #e4a81d;
-  --color-correct: #43a047;
-  --color-error: #bb3429
-}
-
-* {
-  box-sizing: border-box
+  text-decoration:none
 }
 
 body {
-  background-color: #111;
-  color: #f0f8ff;
   font-family: sans-serif;
-  font-size: 2rem;
-  margin: 0 auto;
-  max-width: 500px
+  text-align:center
 }
 
-.main {
-  text-align: center
+h1, h2, h3 {
+  font-weight:400
 }
 
-.game-board {
-  grid-gap: 1rem;
-  display: grid;
-  gap: 1rem;
-  justify-content: center;
-  margin-bottom: 2rem
-}
-
-.game-board__row {
+.game {
   display: flex;
-  gap: 1rem;
-  justify-content: space-between;
-  width: 100%
+  justify-content:space-around
 }
 
-.letter {
-  align-items: center;
-  border: 1px solid #ccc;
+.board {
   display: grid;
-  height: 50px;
-  justify-content: center;
-  width: 50px
-}
-
-.letter--incorrect {
-  background-color: #757575;
-  background-color: var(--color-incorrect)
-}
-
-.letter--present {
-  background-color: #e4a81d;
-  background-color: var(--color-present)
-}
-
-.letter--correct {
-  background-color: #43a047;
-  background-color: var(--color-correct)
-}
-
-.input {
-  background: none;
-  border: none;
-  border-bottom: 1px solid #ccc;
-  color: #ccc;
-  font-size: 2rem;
-  outline: none;
-  width: 320px
-}
-
-.pop-up {
-  background-color: #eee;
-  color: #111;
-  font-size: 1rem;
-  left: 50%;
-  margin-bottom: 2rem;
+  grid-template-columns: repeat(5, 100px);
+  grid-template-rows: repeat(3, 100px);
   padding: 1rem;
-  position: fixed;
-  top: 0;
-  transform: translate(-50%) translateY(-100%);
-  transition: transform .5s cubic-bezier(.42,0,.29,2.25);
-  width: -moz-max-content;
-  width: max-content
+  position:relative
 }
 
-.pop-up--show {
-  transform: translate(-50%) translateY(50px)
+.number {
+  align-items: center;
+  border: 2px solid #000;
+  display: flex;
+  font-size: 4rem;
+  height: 100%;
+  justify-content: center;
+  width:100%
 }
 
-.pop-up p {
-  margin: 0
+.bingo {
+  display: grid;
+  grid-template-columns:repeat(11, 50px)
 }
 
-.animated {
-  animation: rotate 1s ease-in-out
+.bingo__number {
+  align-items: center;
+  border: 1px solid #000;
+  display: flex;
+  justify-content: center;
+  padding:.5rem
 }
 
-@keyframes rotate {
-  0% {
-      transform: rotateX(0)
-  }
-
-  to {
-      transform: rotateX(1turn)
-  }
+.button {
+  grid-column: 1/-1;
+  margin:1rem
 }
 
-.displayFlex{
-display: flex;
-flex-direction: column;
-align-items: start;
-align-content: center;
-flex-wrap: wrap;
+.current-number {
+  font-size: 3rem;
+  grid-column: 1/-1;
+  margin:0
 }
 
-#labelError{
-color: red;
-font-size: smaller;
+.number-appeared {
+  background-color:orange
+}
+
+.number-user-correct {
+  background-color:#90ee90
+}
+
+.number-pc-correct {
+  background-color:#ffa07a
+}
+
+.hide {
+  display:none
+}
+
+.result-text {
+  bottom: -2rem;
+  font-size: 3rem;
+  left: 50%;
+  position: absolute;
+  transform: translate(-50%)
 }
